Изменил имя класса

--- a/Canvas/Canvas.vcxproj
+++ b/Canvas/Canvas.vcxproj
@@ -139,12 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Canvas.cpp" />
+    <ClCompile Include="Festival.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Participant.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Canvas.h" />
+    <ClInclude Include="Festival.h" />
     <ClInclude Include="Participant.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
